# ai-flux

./: .env.example  .gitignore  CNAME  LICENSE  README.md  pyproject.toml
config/: ollama.yaml  ollama_config.yaml
config/models/llama/: 7b.yaml
config/models/qwen/: 72b.yaml
data/input/: test_prompts.json
docs/: CNAME  CONFIGURATION.md  MODELS.md  REPOSITORY_STRUCTURE.md  _config.yml  index.md
examples/: README.md  batch_processing.py  csv_batch_processor.py  csv_jsonl_example.py  csv_multi_prompt_processor.py  directory_jsonl_example.py  directory_processor.py  interactive_session.py  json_batch_processor.py  json_jsonl_example.py  jsonl_slurm_direct.py  utils.py  vision_processor.py
scripts/: llm_pipeline.sh  run_llm.sh
src/: __init__.py  batch_processor.py  config_validator.py  data_processor.py  model_executor.py
src/aiflux/: __init__.py
src/aiflux/container/: container.def
src/aiflux/core/: __init__.py  client.py  config.py
src/aiflux/io/: __init__.py  base.py  handlers.py  output.py  vision.py
src/aiflux/io/input/: csv_handler.py  directory_handler.py  json_handler.py  vision_handler.py
src/aiflux/io/output/: __init__.py  csv_output.py  timestamped_output.py
src/aiflux/processors/: __init__.py  batch.py  interactive.py
src/aiflux/slurm/: runner.py
src/aiflux/templates/deepseek-r1/: 1.5b.yaml  14b.yaml  32b.yaml  671b.yaml  70b.yaml  7b.yaml  8b.yaml
src/aiflux/templates/deepseek-v2/: 16b.yaml  236b.yaml
src/aiflux/templates/gemma3/: 12b.yaml  1b.yaml  27b.yaml  (+1 more)
tests/: __init__.py
tests/converters/: __init__.py  test_csv.py  test_directory.py  test_json.py  test_utils.py
tests/processors/: __init__.py  test_batch.py
tests/slurm/: __init__.py  test_runner.py
(+23 files in other folders)
